--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "node-telegram-bot-api": "^0.50.0",
     "puppeteer": "^5.3.1",
     "superagent": "^6.1.0",
     "telegram-api": "^4.2.0",
